# montecosmo

./: .gitignore  JaxPM_demo_sampling.ipynb  JaxPM_demo_sampling.py  LICENSE  README.md  montecosmodesienv.yaml  montecosmoenv.yaml  montecosmoenv.yml  montenv.yml  numpyro_tests.ipynb  pyproject.toml
demo/: JaxPM_Introduction.ipynb
intro/: CALA_intro.ipynb  JaxPM_Introduction.ipynb  JaxPM_demo_sampling.ipynb  pmwd_quickstart.ipynb  tuto_jax_npe_inference.ipynb
montecosmo/: bdec.py  bricks.py  chains.py  fpm.py  interfaces.py  kde.py  lapprox.py  mcbench.py  metrics.py  model.py  models.py  mydataset.py  nbody.py  plot.py  samplers.py  script.py  script_get_sims.py  script_jz.py  script_pipe.py  script_pipe_abacus.py  script_pipe_fpm.py  script_pipe_optim.py  script_pipe_self.py  script_pipe_selfspec.py  script_pipe_usim.py  utils.py
run/: infer.py  infer_eft.py  infer_eft_png_cmp.py  infer_example.py  infer_temp.py  register.py  script.py  script_get_sims.py  script_jz.py  script_pipe.py  script_pipe_abacus.py  script_pipe_fpm.py  script_pipe_optim.py  script_pipe_self.py
test/: infer_PM.ipynb  model_infer.ipynb  model_valid.ipynb  model_viz.ipynb  numpyro_tests.ipynb
tests/: ELI_model.ipynb  PPL4Cosmo.ipynb  abacusing.ipynb  abacusing.py  anim_chains.ipynb  annealing_test.ipynb  baobaning.ipynb  bayes_intro.ipynb  dev_mcbench.ipynb  diffrax_langevin.ipynb  example_mcbench.ipynb  implicit_infer.ipynb  infer_model copy 2.ipynb  infer_model copy.ipynb  infer_model.ipynb  infer_model.py  infer_model2.ipynb  infer_model2.py  infer_model3.py  infer_samples copy.ipynb  (+54 more)
(+15 files in other folders)
