[build-system]
requires = ["setuptools >= 64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "montecosmo"
version = "0.0.1"
authors = [{name="Hugo Simonfroy"}] # email=""
description = "A differentiable cosmological pipeline for galaxy density field inference."
dependencies = ["numpy", "jax-cosmo", "numpyro"]
readme = "README.md"
requires-python = ">=3.7"
urls = {Repository="https://github.com/hsimonfroy/montecosmo"} # Documentation=""

[tool.setuptools]
packages = ["montecosmo"]